Fixed miniature selection with new encounter entiy. Fixed some scrollbars.

--- a/src/app/ui/campaign/encounter/encounter.component.scss
+++ b/src/app/ui/campaign/encounter/encounter.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../mixins.scss";
+
 :host {
   overflow-y: auto;
   display: flex;
@@ -6,6 +8,8 @@
 
 .content {
   flex: 1;
+  overflow: auto;
+  @include scrollbar;
 }
 
 .actions {
